# rsbeancount

./: .gitignore  Cargo.toml  LICENSE  README.md
bean/: accounts.bean  main.bean
src/: cli.yml  enums.rs  main.rs  processor.rs  transaction.rs
